Fix for content that is overlapping the footer (#2952)

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -41,6 +41,7 @@
   clear: both;
   flex-grow: 1;
   position: relative;
+  padding-bottom: calc(~"@{gn-bottombar-height} + 10px");  
   .badge {
       margin-right: 5px;
     }
